Need more testing

--- a/data/pn.ini
+++ b/data/pn.ini
@@ -984,4 +984,7 @@
 0x09B3 = PACKET_ZC_NOTIFY_BARGAIN_SALE_CLOSE
 0x09B4 = PACKET_CZ_OPEN_BARGAIN_SALE_TOOL
 0x09B5 = PACKET_ZC_OPEN_BARGAIN_SALE_TOOL
-
+0x09DB = PACKET_ACTOR_MOVED
+0x09DC = PACKET_ACTOR_CONNECTED
+0x09DD = PACKET_ACTOR_EXISTS
+0x0A30 = PACKET_ACTOR_INFO
